# hrs_site

./: .env  .gitignore  Cargo.toml  pubspec.yaml  rocket.toml  site-map.drawio
sql/: .$schema.drawio.dtmp  01.sql  02.sql  schema.drawio  schema.sql
src/: api_key_test.rs  authentication.rs  data.rs  data_access_web.rs  database.rs  main.rs  session.rs  validation.rs
src/authentication/: empoyee.rs  signin.rs  signup.rs
src/data/: account.rs  account_type.rs  address.rs  basic_data.rs  brand.rs  inventory.rs  inventory_item.rs  order.rs  order_state.rs  phone.rs  sale_order.rs  supplier.rs  warehouse.rs  warehouse_order.rs  warehouses.rs
src/data/basic_data/: address.rs  phone.rs
src/data_access_web/: account.rs  account_type.rs  order.rs  product.rs  warehouse.rs
src/js/: uri.rs
src/validation/: first_last.rs  password.rs  username.rs
web/account/: add_to_order.html  edit.html  index.html  receipt.html
web/customer/: account.html  account_edit.html  edit_account.html
web/employee/: account.html  account_edit.html  accounts.html  index.html  input_bid.html  input_brand.html  input_customer.html  input_employee.html  input_inventory_item.html  input_job.html  input_order.html  input_service.html  input_supplier.html  warehouse.html  warehouses.html
web/public/: faq.html  header_footer.html  index.html  main.dart  products.html  services.html  signin.html  signup.html  styles.css
web/public/css/: account.css  faq.css  (+5 more)
web/script/: data.dart  data.freezed.dart  data.mapper.dart  employee.dart  header_footer.dart  html_utility.dart  public_page.dart
(+45 files in other folders)
